# slake

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
slake/: CMakeLists.txt  README.md  access.h  basedefs.h  config.h.in  context.h  debug.h  except.cc  except.h  except_base.cc  except_base.h  native.h  object.cc  object.h  opcode.cc  opcode.h  plat.h  reg.h  rt.cc  rt.h  runtime.cc  runtime.h  slxfmt.h  type.cc  type.h  types.h  value.cc  value.h
slake/aot/: context.h
slake/base/: byteord.hh  uuid.hh
slake/base/uuid/: default.hh  win32.hh
slake/dbg/: CMakeLists.txt  adapter.h  dbgstream.h  sidp.cc  sidp.h
slake/flib/: CMakeLists.txt  bitop.h  cmp.h
slake/flib/math/: CMakeLists.txt  fmod.cc  fmod.h
slake/fmt/: slx.h
slake/jit/: CMakeLists.txt  base.h  base.hh
slake/jit/arch/: CMakeLists.txt
slake/jit/arch/x86/: compiler.cc  context.h
slake/jit/arch/x86-64/: CMakeLists.txt  basedefs.h  compiler.cc  compiler.h  context.h
slake/jit/os/: CMakeLists.txt
slake/jit/os/linux/: CMakeLists.txt  base.cc
slake/jit/os/win32/: CMakeLists.txt  base.cc
slake/lib/: CMakeLists.txt  core.cc  core.h  std.cc  std.h  util.cc  util.h
slake/lib/core/: CMakeLists.txt  core.cc
slake/lib/std/: CMakeLists.txt  math.h  std.cc  util.h
slake/lib/std/math/: CMakeLists.txt  math.cc
slake/lib/std/util/: util.cc
slake/lib/util/: CMakeLists.txt  math.cc
slake/lib/util/x86_64/: CMakeLists.txt  math.asm
slake/loader/: CMakeLists.txt  loader.cc  loader.h  reader.cc  reader.h
slake/opti/: CMakeLists.txt  cfg.cc  cfg.h  optimizer.cc  optimizer.h  proganal.cc  proganal.h  regsimp.cc  regsimp.h
slake/opti/cfg/: CMakeLists.txt  divide.cc  live_reg.cc
slake/opti/proganal/: CMakeLists.txt  arithm.cc  cast.cc  expr.cc
slake/plat/: CMakeLists.txt  misc.cc  misc.h  plat.cc  thread.cc  thread.h
slake/plat/linux/: thread.cc
slake/plat/unix/: cond.cc  mutex.cc  thread.cc
slake/plat/win32/: cond.cc  mutex.cc  thread.cc
slake/rt/: CMakeLists.txt  except.cc  exec.cc  exec_fn.cc  exec_ins.cc  fn.cc  gc.cc  gc_dfswalk.cc  gc_heapless.cc  generic.cc  idref.cc  loader.cc  mangle.cc  new.cc  ref.cc  runtime.cc  typechk.cc  var_access.cc
slake/util/: CMakeLists.txt  any.hh  byteord.hh  debug.h  memory.h  scope_guard.h  stream.hh  string.cc  string.h
slake/valdef/: alias.cc  alias.h  array.cc  array.h  base.cc  base.h  class.cc  class.h  context.cc  context.h  fn.cc  fn.h  generic.cc  generic.h  idref.cc  idref.h  instance.cc  instance.h  literal.h  lvar.h  map.h  member.cc  member.h  module.cc  module.h  object.cc  object.h  operand.cc  operand.h  ref.cc  ref.h  root.cc  root.h  scope.cc  scope.h  string.cc  string.h  struct.h  typedef.cc  typedef.h  (+4 more)
slkbc/: CMakeLists.txt  directive.h  ins.cc  ins.h
slkbc/syntax/: bclex.ll  bcparse.yy
slkbcc/: CMakeLists.txt  base.h  bclex.ll  bcparse.yy  class.h  compile.cc  compile.h  fn.h  interface.h  main.cc  mnemonic.cc  mnemonic.h  operand.h  ref.h  scope.cc  scope.h  slkbcc.h  typename.h  var.h
slkbcc/ast/: CMakeLists.txt  class.h  fn.h  generic.h  operand.h  ref.h  scope.h  trait.h  typename.h  var.h
slkbcc/compile/: compile.cc  compile.h
slkbcc/mnemonic/: mnemonic.cc
slkbcc/syntax/: bclex.ll  bcparse.yy
slkc/: CMakeLists.txt  README.md  SlakeLexer.g4  SlakeParser.g4  basedefs.h  config.h.in  main.cc
slkc/ast/: CMakeLists.txt  astnode.cc  astnode.h  attribute.cc  attribute.h  basedefs.h  class.cc  class.h  document.cc  document.h  expr.cc  expr.h  fn.cc  fn.h  generic.cc  generic.h  idref.cc  idref.h  import.cc  import.h  lexer.cc  lexer.h  lexer.in.cpp  macro.cc  macro.h  module.cc  module.h  parser.cc  parser.h  stmt.cc  stmt.h  typename.cc  typename.h  typename_base.cc  typename_base.h  var.cc  var.h
slkc/ast/bc/: CMakeLists.txt  expr.cc  expr.h  fn.cc  fn.h  parser.cc  parser.h  stmt.cc  stmt.h  typename.cc  typename.h
slkc/ast/bc/parser/: attribute.cc  generic_param.cc  param.cc  typename.cc
slkc/ast/parser/: attribute.cc  expr.cc  generic_param.cc  misc.cc  param.cc  stmt.cc  typename.cc
slkc/comp/: compiler.cc  compiler.h
slkc/comp/compiler/: adl.cc  compile.cc  dump.cc  eval.cc  expr.cc  generic.cc  misc.cc  resolve.cc  stmt.cc  typename.cc
slkc/comp/compiler/expr/: binary.cc  unary.cc
slkc/compiler/: CMakeLists.txt  base.cc  base.hh  compiler.cc  compiler.h  compiler.hh  expr.hh  init.hh  modifier.hh  scope.cc  scope.hh  stmt.hh  typename.cc  typename.hh
slkc/compiler/ast/: alias.h  ast.cc  ast.h  astnode.cc  astnode.h  class.cc  class.h  comment.h  expr.cc  expr.h  expr.hh  fn.cc  fn.h  generic.cc  generic.h  idref.cc  idref.h  interface.cc  interface.h  lexer.cc  lexer.cpp  lexer.h  lexer.in.cpp  member.cc  member.h  misc.cc  misc.hh  module.h  node.h  parser.cc  parser.h  ref.cc  ref.h  scope.cc  scope.h  scope.hh  stmt.h  stmt.hh  trait.cc  trait.h  (+7 more)
slkc/compiler/ast/parser/: class.cc  doc.cc  expr.cc  fn.cc  misc.cc  ref.cc  stmt.cc  typename.cc
slkc/compiler/base/: attrib.hh  expr.cc  expr.hh  misc.hh  scope.cc  scope.hh  typename.cc  typename.hh
slkc/compiler/comp/: adl.cc  cast.cc  class.cc  eval.cc  expr.cc  generic.cc  import.cc  mangle.cc  misc.cc  optimize.cc  ref.cc  scope.cc  semantic.cc  stmt.cc  typedef.cc  typename.cc  verify.cc
slkc/compiler/compiler/: compile.cc  compile.hh  eval.cc  expr.cc  expr.hh  fn.hh  localvar.hh  lvalue.cc  misc.cc  misc.hh  rvalue.cc  state.hh  stmt.cc  utils.cc  utils.hh
slkc/decomp/: decompiler.cc  decompiler.h
slkc/decompiler/: decompiler.cc  decompiler.h  decompiler.hh  mnemonic.cc  mnemonic.h  mnemonic.hh  state.cc  state.hh
slkc/lsp/: CMakeLists.txt  main.cc  main.h  net.cc  net.h
slkc/lsp/net/: http.cc  http.h
slkc/map/: slk01.json
slkc/proto/: sls.proto
slkc/server/: CMakeLists.txt  completion.cc  declaration.cc  server.cc  server.h
slkc/syntax/: SlakeLexer.g4  parser.h  slklex.ll  slkparse.yy
spkc/: CMakeLists.txt  main.cc
spkc/compiler/: CMakeLists.txt  common.hh  expr.hh  ins.hh  modifier.hh  scope.cc  scope.hh  typename.hh
spkc/syntax/: spklex.ll  spkparse.yy  token.hh
(+215 files in other folders)
