file(GLOB HEADERS *.h *.hh)
file(GLOB SRC *.c *.cc)
target_sources(slake PRIVATE ${HEADERS} ${SRC})
if(SLAKE_BUILD_SHARED)
    target_sources(slaked PRIVATE ${HEADERS} ${SRC})
endif()

if(WIN32)
    add_subdirectory("win32")
elseif(UNIX)
    add_subdirectory("unix")
else()
    message(FATAL_ERROR "Missing a plat layer implementation")
endif()

install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/slake/plat)
